# automotive-sw-platform

./: .gitignore  README.md
ai/: .gitignore  README.md
ai/keras/: keras_test.py  keras_train.py
ai/onnx/: onnx_convert.py  onnx_test.py
ai/paddle/: paddle_test.py  paddle_train.py
ai/pytorch/: pytorch_test.py  pytorch_train.py
ai/save_models/keras/: fingerprint.pb  keras_metadata.pb  saved_model.pb
ai/save_models/keras/variables/: README.md
ai/save_models/paddle/: paddle_mnist_resnet18.pdiparams.info  paddle_mnist_resnet18.pdmodel
ai/save_models/tensorflow/: checkpoint  tensorflow_mnist_resnet18.index
ai/tensorflow/: tensorflow_test.py  tensorflow_train.py
ai/tensorrt/: tensorrt_convert_fp16.py  tensorrt_convert_fp32.py  tensorrt_convert_int8.py  tensorrt_test_fp16.py  tensorrt_test_fp32.py  tensorrt_test_int8.py
docs/: README.MD
docs/puml/: Middleware.puml  Overrall.puml  Platform.puml
examples/int2DDS/: hello_world_publisher.rs  hello_world_subscriber.rs
examples/int2DDS/hello_world/: hello_world_publisher.rs  hello_world_subscriber.rs
examples/int2DDS/multi-participant/: 19_hello_world_pub_sub.rs  5x_hello_world_2_participant_publisher.rs  5x_hello_world_2_participant_subscriber.rs
examples/int2DDS/performance_test/: README.md  common.rs  perf-build.sh  perf-pub.sh  perf-sub.sh  perftest_publisher.rs  perftest_subscriber.rs
int2log/: README.md
int2log/src/core/int2log-core/: Cargo.toml
int2log/src/core/int2log-model/messages/: log_message.capnp
int2log/src/core/int2log-model/src/: lib.rs
int2log/src/core/int2log-zenoh/: Cargo.toml
int2log/src/tests/capnp-message/: Cargo.toml
int2log/src/tests/capnp-message/messages/: test_message.capnp
int2log/src/tests/capnp-message/src/: lib.rs
int2log/src/tools/int2log-publisher/src/: main.rs
middleware/int2log/docs/: build.md
middleware/int2log/docs/rules/: git.md
middleware/int2log/src/core/int2log-core/src/: lib.rs
middleware/int2log/src/core/int2log-model/src/: build.rs  log_level.rs
middleware/int2log/src/core/int2log-zenoh/: zenoh.json5
middleware/int2log/src/core/int2log-zenoh/src/: lib.rs
middleware/int2log/src/tests/pingpong/int2test-ping/: Cargo.toml
middleware/int2log/src/tests/pingpong/int2test-pong/: Cargo.toml
middleware/int2log/src/tests/pubsub/int2test-publisher/: Cargo.toml  zenoh.json5
middleware/int2log/src/tests/pubsub/int2test-subscriber/src/: main.rs
middleware/int2log/src/tools/int2log-publisher/: Cargo.toml
middleware/int2log/src/tools/int2log-subscriber/: Cargo.toml
middleware/test/ros2/test_pubsub/: CMakeLists.txt  package.xml
middleware/test/ros2/test_pubsub/launch/: image_publisher_launch.py  image_subscriber_launch.py  publisher_launch.py  subscriber_launch.py
middleware/test/ros2/test_pubsub/src/: image_ping.cpp  image_pong.cpp  play_ping.sh  play_pong.sh  publisher_member_function.cpp  publisher_member_function_image.cpp  subscriber_member_function.cpp  subscriber_member_function_image.cpp
middleware/test/zenoh/test_pubsub_zenoh_cpp/: CMakeLists.txt  image_ping.cpp  image_pong.cpp  play_ping.sh  play_pong.sh  publisher_image.cpp  publisher_string.cpp  subscriber_image.cpp  subscriber_string.cpp
middleware/test/zenoh/test_pubsub_zenoh_cpp/image_transmission/: image_transmission.pb.cc  image_transmission.pb.h  image_transmission.proto
middleware/test/zenoh/zenoh_helper_cpp/: CMakeLists.txt  zenoh.json5  zenoh_data_publisher.cpp  zenoh_data_subscriber.cpp  zenoh_session.cpp  zero_copy.json5
middleware/test/zenoh/zenoh_helper_cpp/include/: zenoh_data_publisher.hpp  zenoh_data_subscriber.hpp  zenoh_session.hpp
middleware/test/zenoh/zenoh_helper_cpp/test/: CMakeLists.txt  zenoh_data_publisher.cpp  zenoh_data_subscriber.cpp  zenoh_session.cpp
src/clients/rust/int2log-rs/: Cargo.toml
src/core/int2log-common/: Cargo.toml
src/core/int2log-common/src/: lib.rs
src/core/int2log-core/: Cargo.toml
src/core/int2log-core/src/: lib.rs
src/core/int2log-model/: Cargo.toml
src/core/int2log-model/messages/: log_message.capnp
src/core/int2log-model/src/: build.rs  lib.rs  log_level.rs  log_message.rs  log_message_capnp.rs  serializer.rs
src/core/int2log-test/: Cargo.toml
src/core/int2log-test/src/: main.rs
src/core/int2log-zenoh/: Cargo.toml  zenoh.json5
src/core/int2log-zenoh/src/: lib.rs
src/tests/capnp-message/src/: build.rs  test_message_capnp.rs
src/tests/pubsub/int2test-publisher/: Cargo.toml  zenoh.json5
src/tests/pubsub/int2test-publisher/src/: main.rs
src/tests/pubsub/int2test-subscriber/: Cargo.toml
src/tests/pubsub/int2test-subscriber/src/: main.rs
src/tools/int2log-publisher/: Cargo.toml
src/tools/int2log-publisher/src/: main.rs
src/tools/int2log-subscriber/: Cargo.toml
src/tools/int2log-subscriber/src/: main.rs
