[package]
name = "int2log-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
derivative = {version = "2.2.0"}
int2log-model ={ path = "../int2log-model" }
int2log-zenoh ={ path = "../int2log-zenoh" }
futures = { version = "0.3.30"}