[package]
name = "int2log-zenoh"
version = "0.1.0"
edition = "2021"

[dependencies]
zenoh = { version = "1.0.0-beta.1" }
tokio = { version = "1", features = ["full"] }
# int2log-common = { path = "../int2log-common" }
int2log-model = { path = "../int2log-model" }
flume = { version = "0.11.0"}
futures = { version = "0.3.30" }