[package]
name = "int2log-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
int2log-core = { path = "../../core/int2log-core" }
int2log-model = { path = "../../core/int2log-model" }
int2log-zenoh = { path = "../../core/int2log-zenoh" }
futures = { version = "0.3.31" }